# Student-Airrace

./: Dockerfile  DroneRun.bash  README.md  entrypoint.sh  run.bash
base_image/: .dockerignore  Dockerfile  build.bash  entrypoint.sh
base_image/catkin_ws/src/controller8_pkg/: CMakeLists.txt  package.xml
base_image/catkin_ws/src/controller8_pkg/config/: controller_params.yaml
base_image/catkin_ws/src/controller8_pkg/launch/: controller8.launch
base_image/catkin_ws/src/controller8_pkg/src/: controller8_node.cpp  traj_publisher.cpp
base_image/catkin_ws/src/controller_pkg/: package.xml
base_image/catkin_ws/src/controller_pkg/launch/: controller.launch
base_image/catkin_ws/src/controller_pkg/src/: controller_node.cpp  traj_publisher.cpp
base_image/catkin_ws/src/simulation/: CMakeLists.txt  README.md
base_image/catkin_ws/src/simulation/cfg/: config.rviz
base_image/catkin_ws/src/simulation/launch/: simulation.launch  unity_ros.launch
base_image/catkin_ws/src/simulation/src/: state_estimate_corruptor_node.cpp  w8_to_unity.cpp
base_image/desktop/: Dockerfile  build.sh
base_image/desktop-full/: Dockerfile
base_image/desktop-full/desktop-full/: Dockerfile  build.sh
base_image/robot/: Dockerfile  build.sh
catkin_ws/launch/: main.launch
catkin_ws/src/mapping/: README.md
catkin_ws/src/mapping/aruco_ros/aruco_ros/: CMakeLists.txt  package.xml
catkin_ws/src/mapping/aruco_ros/aruco_ros/launch/: marker_publisher.launch
catkin_ws/src/mapping/aruco_ros/aruco_ros/src/: marker_publish.cpp
catkin_ws/src/mapping/map_generation/: CMakeLists.txt  package.xml  track
catkin_ws/src/mapping/map_generation/launch/: map_generation.launch
catkin_ws/src/mapping/map_generation/src/: map_client_node.cpp  map_service_node.cpp
catkin_ws/src/mapping/map_generation/srv/: CreateMap.srv
catkin_ws/src/navigation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/navigation/config/: config.yaml
catkin_ws/src/navigation/include/: gate.h  navigation.h
catkin_ws/src/navigation/launch/: navigation.launch
catkin_ws/src/navigation/src/: calibration.cpp  main.cpp  navigation.cpp
catkin_ws/src/timing/: CMakeLists.txt  package.xml
catkin_ws/src/timing/config/: referenceGate.yaml
catkin_ws/src/timing/include/: timing.h
catkin_ws/src/timing/launch/: timing.launch
catkin_ws/src/timing/src/: timing.cpp
catkin_ws/src/trajectory3/: CMakeLists.txt  package.xml
catkin_ws/src/trajectory3/include/: planner.h
catkin_ws/src/trajectory3/launch/: trajectory3.launch
catkin_ws/src/trajectory3/src/: trajectory3.cc
catkin_ws/src/trajectory4/: CMakeLists.txt  package.xml
catkin_ws/src/trajectory4/include/: planner.h
catkin_ws/src/trajectory4/launch/: trajectory4.launch
catkin_ws/src/trajectory4/src/: trajectory4.cc
catkin_ws/src/trajectory6/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/trajectory6/include/: planner.h
catkin_ws/src/trajectory6/launch/: trajectory6.launch
catkin_ws/src/trajectory6/src/: trajectory6.cc
